Fixed Dark Mode

--- a/style2.css
+++ b/style2.css
@@ -13,3 +13,19 @@
     background-color: #222;
     color: #e6e6e6;
 }
+
+.mode 
+{
+    float:right;
+}
+
+.change 
+{
+    cursor: pointer;
+    border: 1px solid #555;
+    border-radius: 40%;
+    width: 20px;
+    text-align: center;
+    padding: 5px;
+    margin-left: 8px;
+}
